--- a/Second Year/Physics2/Physics2Report.tex
+++ b/Second Year/Physics2/Physics2Report.tex
@@ -332,5 +332,19 @@ The plot of Voltage (V) versus Time (s) for the discharging circuit shows an exp
 \end{itemize}
 
 
+\section{Exp 5 - Experiments on Half-wave and Full-wave Rectifiers}
+
+\subsection{Aim}
+
+The objectives of this experiment are:
+
+\begin{enumerate}
+    \item To display a sinusoidal electrical signal on an oscilloscope and measure its amplitude and frequence
+    \item TO set up a halw-wave rectifier circuit and investigate its operation using the oscilloscope
+    \item To set up a full-wave rectifier circuit and investigate its operation using the oscilloscope
+\end{enumerate}
+
+
+
 
 \end{document}
